--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   box-sizing: border-box;
   height: 100%;
   background-color: #000000;
-  background-image: url(../imagem/tumblr_npc69bVQMx1uun6jmo1_1280.gif);
+  background-image: url(tumblr_npc69bVQMx1uun6jmo1_1280.gif);
   background-repeat: repeat;
   background-size: cover;
   font-family: 'Inconsolata', Helvetica, sans-serif;
