--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f0f0f0; /* Cor de fundo para melhor visualização */
+  background-image: url(papel-de-parede-tijolos.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .container {
@@ -22,4 +24,11 @@ img {
   max-width: 100%;
   height: auto;
   border: none; /* Remove qualquer borda padrão do link */
+}
+
+h2{
+  font-family: "Teko", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
 }
